# Zlay

./: .clangd  .gitignore  AI_POLICY.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  NOTICE.md  README.md  zlay.h  zlay_math.h
backend/clay/: z_clay_backend.c  z_clay_backend.h
cmake/: ZLayConfig.cmake.in  copy_compile_commands.cmake  install.cmake  new_header.cmake
cmake/clangd/include/: zlay_shader_sources.inc
cmake/templates/: zlay_header.h.in
cmake/vcpkg/: README.md
cmake/vcpkg/zlay/: copyright  portfile.cmake  vcpkg.json
docs/: README.md  backends.md  renderer.md  shaders.md  vision.md
docs/architecture/: README.md  ZLAY_CANVAS_RENDERER_ARCHITECTURE.md  ZLAY_COMPONENTS_ENGINE_FOCUSED_PRD.md  ZLayout_Zenvra_Architecture.md  arsitektur_library_ui_layout_opengl_vulkan.md
docs/architecture/driver/: ARCH1.md  ARCH2.md  ARCH_DRIVER_PLAN.md
docs/architecture/os/: ARCH_MANIPULTION_API_OS.md  ZLAY_INFRASTRUCTURE_WINRT.md
docs/architecture/parser/: ARCH_PARSER.md
docs/design/: ZLay_PlatformDetectionSystem.md
example/basic_c/: main.c
example/basic_cpp/: main.cpp
example/components/: main.cpp
example/platform/: Window.h  Window32.h  WindowCocoa.h  WindowX11.h
example/simply_gui/: gui_cocoa.mm  gui_win32.c  gui_x11.c
example/zlay_wrapper/: main.c  main.cpp
include/: zlay_example.h
include/simply_gui/: gui_cocoa.h  gui_win32.h
include/simply_gui_X11/: gui_x11.h
include/zlay/: components.hpp  components_assets.hpp  components_debug.hpp  components_graph.hpp  components_inspector.hpp  components_scene.hpp  components_timeline.hpp  components_tooling.hpp  components_viewport.hpp  zlay.hpp
include/zlay_wrapper/: zlay_wrapper.h  zlay_wrapper.hpp
scripts/: embed_shaders.py  zlay.py
shader/common/: antialiasing.glsl  antialiasing.hlsl  antialiasing.wgsl
shader/glsl/: rect.frag.glsl  rect.vert.glsl
shader/hlsl/: rect.frag.hlsl  rect.vert.hlsl
shader/slang/: rect.frag.slang  rect.vert.slang
shader/vulkan/: rect.frag.glsl  rect.vert.glsl
shader/webgl/: rect.frag.glsl  rect.vert.glsl
shader/wgsl/: rect.frag.wgsl  rect.vert.wgsl
utils/: logger.h
zlay/: zlay_antialiasing.c  zlay_antialiasing.h  zlay_app.c  zlay_arena.c  zlay_color.c  zlay_color.h  zlay_context.c  zlay_core.c  zlay_hash.c  zlay_interaction.c  zlay_internal.h  zlay_layout.c  zlay_logger.h  zlay_math.h  zlay_parser.h  zlay_render.c  zlay_rounded.c  zlay_rounded.h  zlay_runtime.h  zlay_shell.h  zlay_simd.h  zlay_style.c  zlay_ui.c  zlay_ui.h
zlay/backends/: zlay_backends.h  zlay_host_backend.h  zlay_layout_backend.h  zlay_platform_backend.h  zlay_render_driver_backend.h  zlay_renderer_backend.h
zlay/components/: zlay_components.hpp
zlay/components/assets/: zlay_asset_browser.hpp  zlay_asset_grid.hpp  zlay_asset_preview.hpp  zlay_asset_tree.hpp  zlay_file_drop_zone.hpp
zlay/components/debug/: zlay_bounds_debugger.hpp  zlay_debug_overlay.hpp  zlay_frame_graph_view.hpp  zlay_layout_inspector.hpp  zlay_render_stats.hpp
zlay/components/graph/: zlay_material_graph.hpp  zlay_node.hpp  zlay_node_connection.hpp  zlay_node_graph.hpp  zlay_node_port.hpp  zlay_shader_graph.hpp
zlay/components/hooks/: zlay_dirty.hpp  zlay_effect.hpp  zlay_mount.hpp  zlay_rebuild.hpp  zlay_unmount.hpp  zlay_update.hpp
zlay/components/input/: zlay_button.hpp  zlay_text_field.hpp
zlay/components/inspector/: zlay_component_inspector.hpp  zlay_inspector.hpp  zlay_property_grid.hpp  zlay_property_row.hpp  zlay_transform_panel.hpp
zlay/components/layout/: zlay_column.hpp  zlay_container.hpp  zlay_flex.hpp  zlay_row.hpp  zlay_stack.hpp
zlay/components/meta/: zlay_any_widget.hpp  zlay_concepts.hpp  zlay_crtp.hpp  zlay_detection.hpp  zlay_function_ref.hpp  zlay_policy.hpp  zlay_type_id.hpp  zlay_type_list.hpp  zlay_type_traits.hpp  zlay_variant.hpp
zlay/components/painting/: zlay_canvas_view.hpp
zlay/components/runtime/: zlay_build_context.hpp  zlay_component.hpp  zlay_component_ref.hpp  zlay_component_registry.hpp  zlay_element.hpp  zlay_geometry.hpp  zlay_key.hpp  zlay_reconciler.hpp  zlay_render_object.hpp  zlay_state.hpp  zlay_stateful_component.hpp  zlay_stateless_component.hpp  zlay_widget.hpp
zlay/components/scene/: zlay_entity_row.hpp  zlay_hierarchy_view.hpp  zlay_scene_outliner.hpp  zlay_scene_tree.hpp
zlay/components/state/: zlay_context_provider.hpp  zlay_notifier.hpp  zlay_provider.hpp  zlay_selector.hpp  zlay_signal.hpp  zlay_state_store.hpp  zlay_value_notifier.hpp
zlay/components/style/: zlay_pseudo_state.hpp  zlay_style.hpp  zlay_style_resolver.hpp  zlay_style_sheet.hpp  zlay_style_token.hpp  zlay_variant.hpp
zlay/components/text/: zlay_text.hpp
zlay/components/theme/: zlay_color_scheme.hpp  zlay_radius_scale.hpp  zlay_shadow_scale.hpp  zlay_spacing_scale.hpp  zlay_theme.hpp  zlay_theme_data.hpp  zlay_theme_provider.hpp  zlay_typography.hpp
zlay/components/timeline/: zlay_animation_track.hpp  zlay_curve_editor.hpp  zlay_keyframe_track.hpp  zlay_timeline.hpp  zlay_timeline_ruler.hpp
zlay/core/: zlay_arena.c  zlay_arena.h  zlay_cache.c  zlay_cache.h  zlay_memory.c  zlay_memory.h
zlay/driver/: zlay_backend.c  zlay_backend.h  zlay_batch.c  zlay_batch.h  zlay_context.c  zlay_context.h  zlay_driver.c  zlay_driver.h  zlay_frame.c  zlay_frame.h  zlay_gpu.c  zlay_gpu.h  zlay_pipeline.c  zlay_pipeline.h  zlay_present.c  zlay_present.h  zlay_surface.c  zlay_surface.h  zlay_swapchain.c  zlay_swapchain.h
zlay/event/: zlay_add_eventlistener.h  zlay_animate.h  zlay_effect.h  zlay_event.h  zlay_event_handle.h  zlay_gpu_driver.h  zlay_hover_ui.h  zlay_messagebox.h  zlay_network.h  zlay_runtime.h
zlay/lifecycle/: zlay_autosave.c  zlay_autosave.h  zlay_history.c  zlay_history.h  zlay_journal.c  zlay_journal.h  zlay_lifecycle.c  zlay_lifecycle.h  zlay_recovery.c  zlay_recovery.h  zlay_session.c  zlay_session.h  zlay_snapshot.c  zlay_snapshot.h
zlay/os/: zlay_dpi.c  zlay_dpi.h  zlay_native.h  zlay_os.h  zlay_os_backend.h  zlay_platform.h
zlay/renderer/: zlay_renderer.c  zlay_renderer.h
zlay/ui/: button.c  button.h  input.c  input.h  label.c  label.h
(+244 files in other folders)
